--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,5 @@
-body {
+@media (min-width: 930px) {
+  body {
     margin: 0;
 }
 
@@ -13,6 +14,7 @@ main {
     'article aside';
     grid-template-columns: 6fr 3fr;
 }
+}
 
 article {
   justify-content: center;
@@ -20,11 +22,13 @@ article {
 
 ul {
     list-style: none;
+    padding-inline-start: 0;
 }
 
 table {
     table-layout: fixed;
     width: 85%;
+    min-width: 550px;
     border-collapse: collapse;
     padding: 10px;
     margin-left: 10%;
@@ -72,13 +76,13 @@ tbody tr:nth-child(even) {
 aside > nav {
     margin-top: 30%;
     margin-right: 8%;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     justify-self: start;
 }
 
-aside > nav > ul {
+/* aside > nav > ul {
     margin: 5%;
-}
+} */
 
 a:link {
     text-decoration: none;
